--- a/programming/dsa/leetcode/121.md
+++ b/programming/dsa/leetcode/121.md
@@ -2,7 +2,7 @@
 ### greedy  vs dp 
 - greedy gives you 1 answer
 	- dp: gives you sequential decisioins.
-![](aharo24%202023-02-21%20at%2012.58.55%20AM.png)
+![](../../../z/aharo24%202023-02-21%20at%2012.58.55%20AM.png)
 
 ```python
 class Solution:
